--- a/part3/phonebook/package.json
+++ b/part3/phonebook/package.json
@@ -15,6 +15,7 @@
   "author": "Luca Di Vittorio",
   "license": "ISC",
   "dependencies": {
-    "express": "^5.2.1"
+    "express": "^5.2.1",
+    "morgan": "^1.10.1"
   }
 }
