--- a/part3/phonebook/package.json
+++ b/part3/phonebook/package.json
@@ -15,6 +15,7 @@
   "author": "Luca Di Vittorio",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^5.2.1",
     "morgan": "^1.10.1"
   }
