--- a/part3/phonebook/package.json
+++ b/part3/phonebook/package.json
@@ -18,5 +18,8 @@
     "cors": "^2.8.5",
     "express": "^5.2.1",
     "morgan": "^1.10.1"
+  },
+  "devDependencies": {
+    "@flydotio/dockerfile": "^0.7.10"
   }
 }
