--- a/part3/phonebook/package.json
+++ b/part3/phonebook/package.json
@@ -20,6 +20,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^5.2.1",
+    "mongoose": "^9.1.5",
     "morgan": "^1.10.1"
   },
   "devDependencies": {
