--- a/part3/phonebook/package.json
+++ b/part3/phonebook/package.json
@@ -19,6 +19,7 @@
   "author": "Luca Di Vittorio",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "mongoose": "^9.1.5",
     "morgan": "^1.10.1"
