--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -15,6 +15,7 @@
   "author": "Luca Di Vittorio",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "mongoose": "^9.1.5"
   }
