--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "node --watch index.js",
-    "test": "echo implement test"
+    "test": "node --test"
   },
   "keywords": [
     "bloglist",
