--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "lodash": "^4.17.23",
     "mongoose": "^9.1.5"
   }
 }
